--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 <script>
     let activeEffect // 当前正在执行的副作用函数
-    const data = { text: "Hello World!" };
+    const data = { text: "Hello World!", showText: true };
     const bucket = new WeakMap()
 
     function track(target, key) {
@@ -28,8 +28,11 @@
         if (!deps) {
             depsMap.set(key, (deps = new Set()))
         }
-        // 最后将当前激活的副作用函数添加到“桶”里
+        // 最后将当前激活的副作用函数添加到deps中
+        console.log('将副作用函数添加到deps中')
         deps.add(activeEffect)
+        // 副作用函数的依赖集合deps也反过来存储响应式变量的依赖集合deps
+        activeEffect.deps.push(deps)
     }
 
     function trigger(target, key) {
@@ -37,7 +40,10 @@
         const depsMap = bucket.get(target)
         if (!depsMap) return
         const effects = depsMap.get(key)
-        effects && effects.forEach(fn => fn())
+
+        // 创建一个新的 Set 集合，用于存储需要执行的副作用函数
+        const effectsToRun = new Set(effects)
+        effectsToRun.forEach(fn => fn())
     }
 
     // 通过Proxy代理对数据的读取操作进行拦截
@@ -52,26 +58,38 @@
         }
     })
 
-    // 修改effect函数的功能，使其能够接收一个函数作为参数，并将该函数作为副作用函数执行
-    function effect(fn) {
-        activeEffect = fn;
-        fn();
+    function cleanup(effectFn) {
+        // 遍历 effectFn.deps 数组
+        for (const dep of effectFn.deps) {
+            // 将 effectFn 从依赖集合中移除
+            console.log('从deps中删除副作用函数')
+            dep.delete(effectFn)
+        }
+        // 最后将 effectFn.deps 数组清空, 防止内存泄漏
+        effectFn.deps.length = 0
     }
 
-    effect(() => {
-        console.log("effect triggered");
-        document.body.innerText = obj.text;
+    // 修改effect函数的功能，使其能够接收一个函数作为参数，并将该函数作为副作用函数执行
+    function effect(fn) {
+        const effectFn = () => {
+            // 在执行副作用函数之前，清除所有与该副作用函数相关联的依赖集合
+            cleanup(effectFn)
+            activeEffect = effectFn
+            fn()
+        }
+        // effectFn.deps 用来存储所有与该副作用函数相关联的依赖集合
+        effectFn.deps = []
+        // 执行副作用函数
+        effectFn()
+    }
+
+    effect(function effectFn() {
+        console.log("effectFn triggered");
+        document.body.innerText = obj.showText ? obj.text : "No text";
     });
 
-    effect(() => {
-        console.log("effect triggered 2");
-        console.log('obj.text: ', obj.text);
-    });
-
-    setTimeout(() => {
-        // 触发obj.text的setter函数，写入操作
-        obj.nonExist = "Hello Vue!";
-    }, 1000);
+    obj.showText = false;
+    // obj.text = "Hello Vue!";
 </script>
 
 </html>
