--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
-    <h1>手写Vue响应式</h1>
+    <h1>手写Vue响应式-二魔</h1>
 </body>
 <script>
     let activeEffect // 当前正在执行的副作用函数
-    const data = { text: "Hello World!", showText: true };
+    const effectStack = [] // 副作用函数栈
+    const data = { foo: true, bar: true };
     const bucket = new WeakMap()
 
     function track(target, key) {
@@ -29,7 +30,6 @@
             depsMap.set(key, (deps = new Set()))
         }
         // 最后将当前激活的副作用函数添加到deps中
-        console.log('将副作用函数添加到deps中')
         deps.add(activeEffect)
         // 副作用函数的依赖集合deps也反过来存储响应式变量的依赖集合deps
         activeEffect.deps.push(deps)
@@ -62,7 +62,6 @@
         // 遍历 effectFn.deps 数组
         for (const dep of effectFn.deps) {
             // 将 effectFn 从依赖集合中移除
-            console.log('从deps中删除副作用函数')
             dep.delete(effectFn)
         }
         // 最后将 effectFn.deps 数组清空, 防止内存泄漏
@@ -72,10 +71,14 @@
     // 修改effect函数的功能，使其能够接收一个函数作为参数，并将该函数作为副作用函数执行
     function effect(fn) {
         const effectFn = () => {
-            // 在执行副作用函数之前，清除所有与该副作用函数相关联的依赖集合
             cleanup(effectFn)
             activeEffect = effectFn
+            // 在调用副作用函数之前将当前副作用函数压入栈中
+            effectStack.push(effectFn)
             fn()
+            // 当前副作用函数执行完毕后，将activeEffect还原为之前的值
+            effectStack.pop()
+            activeEffect = effectStack[effectStack.length - 1]
         }
         // effectFn.deps 用来存储所有与该副作用函数相关联的依赖集合
         effectFn.deps = []
@@ -83,13 +86,20 @@
         effectFn()
     }
 
-    effect(function effectFn() {
-        console.log("effectFn triggered");
-        document.body.innerText = obj.showText ? obj.text : "No text";
-    });
+    let tmp1, tmp2
+    effect(function effectFn1() {
+        console.log('执行effectFn1')
 
-    obj.showText = false;
-    // obj.text = "Hello Vue!";
+        effect(function effectFn2() {
+            console.log('执行effectFn2')
+            // 在 effectFn2 中读取obj.bar
+            temp2 = obj.bar
+        })
+        // 在 effectFn1 中读取obj.foo
+        temp1 = obj.foo
+    })
+    obj.foo = false
+
 </script>
 
 </html>
